Fix: Fullscreen - Bookmark overflow button when switching from DOM Fullscreen #685

--- a/css/leptonChromeESR.css
+++ b/css/leptonChromeESR.css
@@ -10279,19 +10279,24 @@
 /** Fullscreen - Overlap toolbar **********************************************/
 @supports -moz-bool-pref("userChrome.fullscreen.overlap") {
   @supports -moz-bool-pref("browser.fullscreen.autohide") {
-    :root[sizemode="fullscreen"] #navigator-toolbox {
+    :root[sizemode="fullscreen"]:not([inDOMFullscreen="true"]) #navigator-toolbox {
       position: fixed !important; /* Needed for content to take up entire height */
       z-index: 1000 !important; /* Puts the UI above the content */
     }
-    :root[sizemode="fullscreen"] #navigator-toolbox:is(:hover, :focus-within) {
+    :root[sizemode="fullscreen"]:not([inDOMFullscreen="true"]) #navigator-toolbox:is(:hover, :focus-within) {
       margin-top: 0 !important;
     }
-    :root[sizemode="fullscreen"] :-moz-any(#navigator-toolbox, #titlebar, #nav-bar, #PersonalToolbar) {
+    :root[sizemode="fullscreen"]:not([inDOMFullscreen="true"])
+      :-moz-any(#navigator-toolbox, #titlebar, #nav-bar, #PersonalToolbar) {
       width: 100%; /* Makes the UI take up the entire width */
     }
     @media (-moz-gtk-csd-available) {
       /* Fix transparent background */
-      :root[tabsintitlebar][sizemode="fullscreen"]:is(:not([lwtheme]), :not(:-moz-lwtheme)) #TabsToolbar {
+      :root[tabsintitlebar][sizemode="fullscreen"]:not([inDOMFullscreen="true"]):is(
+          :not([lwtheme]),
+          :not(:-moz-lwtheme)
+        )
+        #TabsToolbar {
         appearance: auto !important;
       }
     }
