--- a/src/fullscreen/_overlap.scss
+++ b/src/fullscreen/_overlap.scss
@@ -1,4 +1,4 @@
-:root[sizemode="fullscreen"] #navigator-toolbox {
+:root[sizemode="fullscreen"]:not([inDOMFullscreen="true"]) #navigator-toolbox {
   position: fixed !important; /* Needed for content to take up entire height */
   z-index: 1000 !important; /* Puts the UI above the content */
 
@@ -7,13 +7,13 @@
   }
 }
 
-:root[sizemode="fullscreen"] :-moz-any(#navigator-toolbox, #titlebar, #nav-bar, #PersonalToolbar) {
+:root[sizemode="fullscreen"]:not([inDOMFullscreen="true"]) :-moz-any(#navigator-toolbox, #titlebar, #nav-bar, #PersonalToolbar) {
   width: 100%; /* Makes the UI take up the entire width */
 }
 
 @include OS($linux) {
   /* Fix transparent background */
-  :root[tabsintitlebar][sizemode="fullscreen"]#{$not_lwtheme} #TabsToolbar {
+  :root[tabsintitlebar][sizemode="fullscreen"]:not([inDOMFullscreen="true"])#{$not_lwtheme} #TabsToolbar {
     appearance: auto !important;
   }
 }
